Added and Styled sections

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,9 +7,15 @@
     <title>Scroll-Animation</title>
 </head>
 <body>
-    <h1>
-        Scroll-Animation
-    </h1>
-    <img src="../assets/icons/Scene.svg"/>
+    <section id="sectionOne">
+        <h1>
+            Scroll Animation Demo
+        </h1>
+    </section>
+    <section id="sectionTwo">
+        <h1>
+            Hello There
+        </h1>
+    </section>
 </body>
 </html>
