Added and Styled Button

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,11 @@
         <h1>
             Scroll Animation Demo
         </h1>
+        <a href="#sectionTwo">
+            <button>
+                Scroll Animation
+            </button>    
+        </a> 
     </section>
     <section id="sectionTwo">
         <h1>
